Support for asyncapi 3.0.0 (#359)
* Fix Multipart

* Fix Multipart

* Fix Multipart

* Fix tests

* Fix tests

* Update V3 approach for ref

* Update V3 approach for ref

* Update dependencies

* Update actions

* Update JDK Version

* Update JDK Version

* Update JDK Version

* Fix Dependency read file